<resources>
    <string name="app_name">InstaHire</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Register here</string>
    <string name="login">Login</string>
    <string name="hello_world">Hello World</string>
    <string name="sign_in">Sign In</string>
    <string name="dashboard">Dashboard</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="caps_registration">REGISTRATION</string>
    <string name="apply">Apply</string>
    <string name="boost">Boost</string>
    <string name="bullet">•</string>
    <string name="tailor_cv_resume">Tailor CV/Resume</string>
    <string name="source_placeholder">Source: Indeed</string>
    <string name="upload_resume">Please upload your resume to enhance your job applications.</string>
    <string name="boost_your_profile_title">Boost Your Profile</string>
    <string name="upload_resum">Select Resume (PDF)</string>
    <string name="no_resume_selected">No resume selected</string>
    <string name="upload_your_resume_pdf_only">Upload Your Resume (PDF Only)</string>
    <string name="no_file_uploaded">No file uploaded</string>
    <string name="file_icon">File Icon</string>
    <string name="delete_file">Delete File</string>
    <string name="uploaded_on_25_feb_2025">Uploaded on: 25 Feb 2025</string>
    <string name="resume_pdf">resume.pdf</string>
    <string name="tailor_my_profile">Tailor My Profile</string>
    <string name="recent">Recent</string>
    <string name="upload">Upload</string>
    <string name="enter_job_url">Enter Job URL</string>
    <string name="files">Files</string>
    <string name="bolt_icon">bolt icon</string>
    <string name="get_started_by_boosting_your_profile">Get started by boosting your profile</string>
    <string name="recent_user_files">Recent User Files</string>
    <string name="recent_generted_files">Recent Generated Files</string>
    <string name="error_icon">error_icon</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="google_llc">Google LLC</string>
    <string name="san_francisco_ca_posted_12th_feb_2025">San Francisco, CA | Posted: 12th Feb 2025</string>
    <string name="this_is_a_great_opportunity_for_a_skilled_android_developer">This is a great opportunity for a skilled Android developer...</string>
    <string name="about_us">About Us</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="meet_our_team">Meet Our Team</string>
    <string name="about_us_description">Tired of getting rejected by companies? \nNeed to enhance your profile?\nLook no further!\nInstaHire helps you stand out from the crowd by analysing your resume and job description and tailoring your resume to the dream job you are looking for.</string>
    <string name="member_1">member_1</string>
    <string name="pratik_byathnal">Pratik Byathnal</string>
    <string name="day_dreamer">Leading the High Life</string>
    <string name="rashmi_vidushani">Rashmi Vidushani</string>
    <string name="member_2">member_2</string>
    <string name="portable_tension">Portable Tension</string>
    <string name="lalana_chamika">Lalana Chamika</string>
    <string name="loves_french_vanilla">Loves French Vanilla</string>
    <string name="member_4">member_4</string>
    <string name="nasif_nuha">Nasif Nuha</string>
    <string name="member_3">member_3</string>
    <string name="lost_phone_recently">Lost Phone Recently</string>
    <string name="_1247949">1247949</string>
    <string name="_1180266">1180266</string>
    <string name="_1227349">1227349</string>
    <string name="_1189191">1189191</string>
    <string name="use_file">Use File</string>
    <string name="our_features">Features\n\n- Browse for more than 10,000+ job posting from our dashboard (Courtesy Findwork API) \n\n- Store resume securely online (Firebase Storage) \n\n- Generate as many \"enhanced\" resume using OpenAI API (Courtesy OpenAI) \n\n- Store generated resume securely online \n\n- View your files directly from our app for seamless experience (Courtesy Web Google Document Viewer) \n\n-Get reminder notifications to regularly boost your profile and apply for jobs \n\n</string>
</resources>