<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- App Description -->
            <TextView
                android:id="@+id/tv_app_description"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_description"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_app_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingBottom="24dp"
                android:text="@string/our_features"/>


            <!-- Team Members -->
            <TextView
                android:id="@+id/tv_team_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/meet_our_team"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_features" />

            <!-- Member 1 -->
            <LinearLayout
                android:id="@+id/ll_member_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_team_members">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="@string/member_1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bolt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pratik_byathnal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_dreamer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1247949"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Member 2 -->
            <LinearLayout
                android:id="@+id/ll_member_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_team_members">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="@string/member_2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bolt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rashmi_vidushani"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portable_tension" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1180266"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Member 3 -->
            <LinearLayout
                android:id="@+id/ll_member_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_member_1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="@string/member_3"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bolt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lalana_chamika"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loves_french_vanilla" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1189191"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Member 4 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_member_2">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="@string/member_4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bolt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nasif_nuha"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_phone_recently" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1227349"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>