<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <!-- PDF Icon -->
        <ImageView
            android:id="@+id/img_file_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/file_icon"
            android:src="@drawable/ic_pdf"
            app:tint="?attr/colorPrimary" />

        <!-- File Info -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp"
            tools:ignore="RtlSymmetry">

            <!-- File Name -->
            <TextView
                android:id="@+id/tv_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume_pdf"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Upload Date -->
            <TextView
                android:id="@+id/tv_upload_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploaded_on_25_feb_2025"
                android:textColor="?attr/colorOnSurface"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Delete Button -->
        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/delete_file"
            android:src="@drawable/ic_delete"
            app:tint="@color/red" />
    </LinearLayout>
</androidx.cardview.widget.CardView>