<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.job.JobPostingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/windowBackground"
        android:padding="16dp"
        tools:context=".JobDetailsActivity">

        <!-- Job Title -->
        <TextView
            android:id="@+id/tv_job_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/software_engineer"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Company Name -->
        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_llc"
            android:textColor="?android:textColorSecondary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_job_title" />

        <!-- Location & Date -->
        <TextView
            android:id="@+id/tv_location_date"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/san_francisco_ca_posted_12th_feb_2025"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_company_name" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_location_date" />

        <!-- Job Description -->
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/rv_keywords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <TextView
                android:id="@+id/tv_job_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:paddingTop="8dp"
                android:text="@string/this_is_a_great_opportunity_for_a_skilled_android_developer"
                app:layout_constraintBottom_toTopOf="@+id/rv_keywords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </ScrollView>

        <!-- Keywords / Tags -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_keywords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_source"
            app:layout_constraintEnd_toStartOf="@+id/fab_apply_job"
            app:layout_constraintStart_toStartOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_chip" />

        <!-- Job Source -->
        <TextView
            android:id="@+id/tv_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/source_placeholder"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_tailor"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Apply Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tailor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/red"
            android:padding="12dp"
            android:text="@string/tailor_cv_resume"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Floating Action Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_apply_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="76dp"
            android:rotation="-45"
            android:scaleX="0.85"
            android:scaleY="0.85"
            android:contentDescription="@string/apply"
            android:src="@android:drawable/ic_menu_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="?attr/colorControlHighlight" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>